# aoc

./: .gitignore  Day1.hs  Day10.hs  Day11.hs  Day12.hs  Day13.hs  Day13Spec.hs  Day15.hs  Day16.hs  Day18.hs  Day2.hs  Day20.hs  Day21.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  Day8.hs  Day9.hs  README.md  aoc2022.cabal
2022/: .gitignore  Day1.hs  Day12.hs  Day13.hs  Day14.hs  Day15.hs  Day2.hs  Day21.hs  Day4.hs  Day5.hs  Day6.hs  Day7.hs  README.md  aoc2022.cabal
2023/: Common.roc  README.md  day1.roc  day10.roc  day2.roc  day3.roc  day4.roc  day5.roc  day6.roc  day7.roc  generate.roc  template.roc
2024/: .gitignore  1.roc  2.roc  3.roc  4.roc  5.roc  setup.roc  template.roc
day1/: day1.cabal
day1/app/: Main.hs
day2/: day2.cabal
day2/app/: Main.hs
day3/: day3.cabal
day3/app/: Main.hs
day4/: day4.cabal
day4/app/: Main.hs
day5/: day5.cabal
roctoberfest/: day1.roc  day2.roc
