cabal-version:      2.4
name:               aoc2022
version:            0.1.0.0
author:             Isaac Van Doren
common flags
    default-language: Haskell2010
    ghc-options:
        -Weverything
        -Wno-unused-packages
        -Wno-missing-local-signatures
        -Wno-all-missed-specialisations
        -Wno-incomplete-uni-patterns
        -Wno-prepositive-qualified-module
        -Wno-compat-unqualified-imports

common packages
    build-depends: base, megaparsec, containers, split, extra, data-interval

executable Day1
    import: flags, packages
    main-is: Day1.hs

executable Day2
    import: flags, packages
    main-is: Day2.hs

executable Day3
    import: flags, packages
    main-is: Day3.hs

executable Day4
    import: flags, packages
    main-is: Day4.hs

executable Day5
    import: flags, packages
    main-is: Day5.hs

executable Day6
    import: flags, packages
    main-is: Day6.hs

executable Day7
    import: flags, packages
    main-is: Day7.hs

executable Day8
    import: flags, packages
    main-is: Day8.hs

executable Day9
    import: flags, packages
    main-is: Day9.hs

executable Day10
    import: flags, packages
    main-is: Day10.hs

executable Day11
    import: flags, packages
    main-is: Day11.hs

executable Day12
    import: flags, packages
    main-is: Day12.hs

executable Day13
    import: flags, packages
    main-is: Day13.hs

executable Day14
    import: flags, packages
    main-is: Day14.hs

executable Day15
    import: flags, packages
    main-is: Day15.hs
